# NexHTML

./: .env.example  .gitignore  .gitmodules  LICENSE  README.md  README_CN.md  gitpush.sh  pyproject.toml
docs/: AGENTS.md  CONFIGURATION.md  PROJECT_STRUCTURE.md
docs/prompts/: webdev_case1_prompt.md  webdev_case2_prompt.md
src/DatavisSearchAgent/: config.yaml  start.py  system-prompt.md
src/DatavisSearchAgent/tools/: KaggleDownload.yaml  KaggleDownload_tool.py  __init__.py  http_server.yaml  http_server_tool.py  interactive_python_executor.yaml  interactive_python_executor_tool.py  kaggle_download.yaml  kaggle_download_tool.py
src/Paper2PosterAgent/: config.yaml  start.py  system-prompt.md
src/Paper2PosterAgent/tools/: __init__.py  gen_qr_code.yaml  gen_qr_code_tool.py  height_detect.yaml  height_detect_tool.py  image_caption.yaml  image_caption_tool.py  layout_balance.yaml  layout_balance_tool.py  logo_manager.yaml  logo_manager_tool.py  paper2md.yaml  paper2md_tool.py  poster.yaml  poster_tool.py  screenshot.yaml  screenshot_tool.py  time_tool.py
src/Paper2PosterAgent/tools/prompts/: layout_balance.md  poster_prompt.md
src/WebDevAgent/: config.yaml  start.py  system-prompt.md
src/WebDevAgent/tools/: web_img_search.py  web_img_search.yaml
